feat: implement email confirmation flow and update user registration process